--- a/package.json
+++ b/package.json
@@ -11,28 +11,31 @@
     "back": "nodemon index.js"
   },
   "dependencies": {
-    "axios": "^1.6.5",
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^8.0.4",
+    "gapi-script": "^1.2.0",
+    "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.2",
+    "nodemon": "^3.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.2"
+    "react-google-login": "^5.2.2",
+    "react-router-dom": "^6.21.3",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
-    "eslint": "^8.55.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.0.8"
+    "vite": "^5.0.12"
   }
 }
